--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: #1D265E;
+  color: #F3F7F0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
